change home preview

--- a/home.html
+++ b/home.html
@@ -83,7 +83,10 @@
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-2">
                 <img src="/asset/home/log-out.png" />
-                <a href="index.html" class="ml-3 text-nuni text-decoration-none">
+                <a
+                  href="index.html"
+                  class="ml-3 text-nuni text-decoration-none"
+                >
                   Logout
                 </a>
               </li>
@@ -103,30 +106,36 @@
                 </h1>
                 <div class="my-2 text-white text-nuni">+62 8139 3877 7946</div>
               </div>
-              <div class="d-flex flex-column">
+              <div
+                class="d-flex flex-lg-column flex-row justify-content-between mt-lg-0 mt-1"
+              >
                 <a
                   href="#"
-                  class="btn bg-outline-white text-white font-weight-bold py-2 px-4 mb-2 rounded-10"
+                  class="btn bg-outline-white text-white font-weight-bold py-2 px-4 mb-0 mx-lg-0 mx-2 mb-lg-2 rounded-10"
                 >
                   <img
                     src="/asset/home/arrow-up.png"
                     alt=""
-                    class="text-nuni"
+                    class="text-nuni d-none d-sm-block"
                   />
                   Transfer
                 </a>
                 <a
                   href="#"
-                  class="btn bg-outline-white text-white font-weight-bold py-2 px-5 mt-3 rounded-10"
+                  class="btn bg-outline-white text-white font-weight-bold py-2 pl-lg-5 pr-lg-5 pl-4 pr-sm-5 pr-4 mt-0 mt-lg-3 rounded-10"
                 >
-                  <img src="/asset/home/plus.png" alt="" class="text-nuni" />
+                  <img
+                    src="/asset/home/plus.png"
+                    alt=""
+                    class="text-nuni d-none d-sm-block"
+                  />
                   Top Up
                 </a>
               </div>
             </div>
           </div>
           <div class="row mt-4">
-            <div class="col-lg-7 col-12">
+            <div class="col-lg-7 col-12 mb-lg-0 mb-3">
               <div class="bg-white rounded-14 p-4">
                 <div class="row">
                   <div class="col-6">
