costumization success page and home page.

--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
                 class="d-flex flex-lg-column flex-row justify-content-between mt-lg-0 mt-1"
               >
                 <a
-                  href="#"
+                  href="search.html"
                   class="btn bg-outline-white text-white font-weight-bold py-2 px-4 mb-0 mx-lg-0 mx-2 mb-lg-2 rounded-10"
                 >
                   <img
