--- a/success.html
+++ b/success.html
@@ -138,10 +138,10 @@
                   </div>
                 </div>
               </div>
-              <div class="d-flex align-self-end">
+              <div class="d-flex align-self-end align-items-center">
                 <a href="#" class="">
                   <button
-                    class="btn bg-white10 mt-4 mx-2 mb-3 py-2 px-4 text-white rounded-10"
+                    class="btn bg-white10 mt-4 mx-lg-3 ml-2 ml-lg-0 mb-3 py-2 px-4 text-white rounded-10"
                   >
                     <img src="asset/success/share-2.png" alt="" />
                   </button>
@@ -150,15 +150,19 @@
                   <button
                     class="btn bg-white10 mt-4 ml-2 mb-3 py-2 px-4 text-primaryy rounded-10"
                   >
-                    <img src="asset/success/download.png" alt="" />
-                    Download PDF
+                    <img
+                      src="asset/success/download.png"
+                      alt=""
+                      class="d-none d-sm-block"
+                    />
+                    Download <span class="d-none d-sm-block"> PDF</span>
                   </button>
                 </a>
                 <a href="home.html" class="">
                   <button
                     class="btn bg-primaryy mt-4 mx-2 mb-3 py-2 px-4 text-white rounded-10"
                   >
-                    Back to Home
+                    <span class="d-none d-sm-block"> Back to</span> Home
                   </button>
                 </a>
               </div>
