costumized success and home page.

--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
                   <img
                     src="/asset/home/arrow-up.png"
                     alt=""
-                    class="text-nuni d-none d-sm-block"
+                    class="text-nuni d-none d-sm-inline"
                   />
                   Transfer
                 </a>
@@ -127,7 +127,7 @@
                   <img
                     src="/asset/home/plus.png"
                     alt=""
-                    class="text-nuni d-none d-sm-block"
+                    class="text-nuni d-none d-sm-inline"
                   />
                   Top Up
                 </a>
