--- a/success.html
+++ b/success.html
@@ -20,10 +20,12 @@
     <!-- Navbar -->
     <nav class="bg-white py-4 pl-2">
       <div class="container">
-        <div class="d-flex justify-content-between align-items-center">
+        <div
+          class="d-flex flex-sm-row flex-column justify-content-between align-items-center"
+        >
           <h3 class="text-primaryy m-0 text-nuni txt-bold">ZWallet</h3>
 
-          <div class="d-flex align-items-center">
+          <div class="d-flex align-items-center mt-sm-0 mt-3">
             <img src="/asset/home/fhoto.png" />
 
             <div class="mx-3">
@@ -148,21 +150,21 @@
                 </a>
                 <a href="#" class="">
                   <button
-                    class="btn bg-white10 mt-4 ml-2 mb-3 py-2 px-4 text-primaryy rounded-10"
+                    class="btn bg-white10 mt-4 ml-2 ml-lg-0 mb-3 py-2 px-4 text-primaryy rounded-10"
                   >
                     <img
                       src="asset/success/download.png"
                       alt=""
-                      class="d-none d-sm-block"
+                      class="d-none d-sm-inline"
                     />
-                    Download <span class="d-none d-sm-block"> PDF</span>
+                    Download <span class="d-none d-sm-inline"> PDF</span>
                   </button>
                 </a>
                 <a href="home.html" class="">
                   <button
                     class="btn bg-primaryy mt-4 mx-2 mb-3 py-2 px-4 text-white rounded-10"
                   >
-                    <span class="d-none d-sm-block"> Back to</span> Home
+                    <span class="d-none d-sm-inline"> Back to</span> Home
                   </button>
                 </a>
               </div>
